package com.game.model.story;

public enum Flag {
    EXAMPLE_FLAG
}
